# agents_setup

./: .env.example  .gitignore  CLAUDE.md  README.md  requirements.txt
.claude/: settings.local.json
.claude/commands/: optimizer_analysis.md  qa_automation.md
.cursor/rules/: global_setup.md  mongodb.md  system-map.md
db-docs/: README.md
db-docs/clickhouse/: jupiter_booking_errors_v2.md  search_api_stats_gds_raw.md
db-docs/mongodb/: debug_logs.md  optimizer_logs.md
db-docs/mysql/: bookability_built_contestant.md  bookability_contestant_attempts.md  bookability_customer_attempts.md  booking_contestants.md  booking_passengers.md  booking_segments.md  booking_statement_items.md  booking_statement_transactions.md  booking_tasks.md  booking_virtual_card_statement_items.md  bookings.md  optimizer_attempt_bookings.md  optimizer_attempts.md  optimizer_candidate_tags.md  optimizer_candidates.md  optimizer_tags.md  (+1 more)
qa_automation/: .gitignore  pyproject.toml
qa_automation/qa_automation/: browser.py  network.py  reporting.py
qa_automation/qa_automation/cleanup/: respro_cleanup.py
qa_automation/qa_automation/db/: queries.py  run.py
qa_automation/qa_automation/pages/: base_page.py  checkout_page.py  confirmation_page.py  respro_page.py  results_page.py  search_page.py  selectors.py  summit_stats_page.py
qa_automation/qa_automation/runners/: _common.py  book.py  cleanup.py  diag.py  report.py  search.py  search_telemetry.py  validate.py
qa_automation/qa_automation/utils/: env.py
scripts/: clickhouse_query.py  mongo_query.py  mysql_query.py  sync_genesis.sh
(+38 files in other folders)
