[project]
name = "qa-automation"
version = "0.1.0"
description = "End-to-end QA automation for FlightHub and JustFly"
requires-python = ">=3.12"
dependencies = [
    "pytest==8.3.4",
    "pytest-playwright==0.5.2",
    "playwright==1.48.0",
    "pytest-xdist==3.6.1",
    "pytest-html==4.1.1",
    "pytest-rerunfailures==14.0",
    "pytest-json-report==1.5.0",
    "httpx==0.27.2",
    "tenacity==9.0.0",
    "pydantic==2.9.2",
    "ruamel.yaml==0.18.6",
    "pymysql==1.1.1",
    "pymongo==4.9.2",
    "clickhouse-connect==0.8.6",
    "filelock==3.16.1",
    "python-dotenv==1.0.1",
    "pytest-metadata==3.1.1",
]

[project.scripts]
qa-search = "qa_automation.runners.search:main"
qa-book = "qa_automation.runners.book:main"
qa-validate = "qa_automation.runners.validate:main"
qa-search-telemetry = "qa_automation.runners.search_telemetry:main"
qa-cleanup = "qa_automation.runners.cleanup:main"
qa-diag = "qa_automation.runners.diag:main"
qa-report = "qa_automation.runners.report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qa_automation"]

[dependency-groups]
dev = []
